--- a/index.css
+++ b/index.css
@@ -5,227 +5,252 @@
     border: 0;
   }
 
-  body {
-    background-color: #1E1E1D;
-    font-family: 'Poppins', sans-serif;
-  }
+/* Defaults for body and animation when the webpage loads */
+body {
+  animation: pageLoad ease-in 0.5s;
+  background-color: #1E1E1D;
+  font-family: 'Poppins', sans-serif;
+}
 
-  main {
-    min-height: 100vh;
-    margin-bottom: 100px;
+@keyframes pageLoad {
+  0% {
+    opacity: 0;
   }
+  100% {
+    opacity: 1;
+  }
+}
 
-  /* Text styling */
-  h1, h2, h3, p, a {
-    color: #EDF0F1;
-    text-align: center;
-    float: center;
-  }
-  
+main {
+  min-height: 100vh;
+  margin-bottom: 100px;
+}
+
+/* Text styling */
+h1, h2, h3, p, a {
+  color: #EDF0F1;
+  text-align: center;
+  float: center;
+}
+
+h1 {
+  line-height: 60px;
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 0.7em;
+  opacity: 0.5;
+}
+
+p {
+  line-height: 66.15px;
+  font-size: 1.2em;
+}
+
+a {
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+a:hover {
+  color: #ACACAC;
+}
+
+#header {
+  margin-top: 15%;
+  transition: all ease 0.5s;
+}
+
+#header.active {
+  margin-top: 0;
+  opacity: 0;
+}
+
+/* Search Bar */
+#search-bar, #search {
+  margin: 5% auto 0 auto;
+  display: block;
+  height: 50px;
+  width: 500px;
+  border-radius: 50px;
+  box-shadow: 1px 1px 10px #141414;
+  background-color: #1C1C1B;
+  transition: all ease 0.5s;
+}
+
+#search {
+  text-align: center;
+  font-size: 1.5em;
+  background-color: #1C1C1B;
+  border: 1px solid #323230;
+}
+
+#search:focus {
+  outline: none;
+}
+
+#search.active, #search.active {
+  margin: 0 auto;
+}
+
+/* Removes "x" button from search bar
+Taken from Maxime Rouiller
+blog post: Remove the X from Internet Explorer and Chrome input type search */
+input[type=search]::-ms-clear {
+  display: none; width : 0; height: 0;
+}
+
+input[type=search]::-ms-reveal {
+  display: none; width : 0; height: 0;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
+input {
+  color: #EDF0F1;
+}
+
+/* Item-Area */
+#item-area {
+  display: none;
+  grid-template-columns: repeat(1);
+  transform: translateY(100px);
+  margin-top: -100px;
+}
+
+.item-icon {
+  display: block;
+  width: 60px;
+  height: 65.4px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.item-box {
+  position: relative;
+  width: 450px;
+  height: 60px;
+  background-color: #24252A;
+  border-radius: 50px;
+  box-shadow: 0px 7px 10px -10px #141414;
+}
+
+.item {
+  opacity: 0;
+  margin: 0 auto;
+  margin-top: 50px;
+  transition: all ease-in 0.3s;
+}
+
+.item.active {
+  opacity: 1;
+}
+
+.location-box {
+  display: none;
+  margin: 0 auto 15px auto;
+  width: 300px;
+  height: 0px;
+  background-color: #24252A;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0px 7px 10px -10px #1C1C1B;
+  transition: all 0.3s;
+  opacity: 0;
+}
+
+.location-box.active {
+  transform: translateY(5%);
+  opacity: 1;
+  height: 325px;
+}
+
+/* Footer */
+#footer-content {
+  margin-top: 150px;
+  background-color: #1C1C1B;
+  font-size: 1em;
+  justify-content: center;
+  bottom: 0;
+  width: 100%;
+}
+
+#footer-content > p {
+  opacity: 0.5;
+}
+
+/* Media query for mobile */
+@media (max-width: 500px) {
+
+  /* Text styling */    
   h1 {
-    line-height: 87.2px;
-    font-size: 1.5em;
-  }
-
-  h2 {
-    font-size: 2em;
-  }
-
-  h3 {
-    font-size: 0.7em;
-    opacity: 0.5;
+    line-height: 58.13px;
+    font-size: 4vw;
   }
   
   p {
     line-height: 50px;
-    font-size: 1.2em;
-  }
-
-  a {
-    text-decoration: none;
-    transition: all 0.2s;
-  }
-
-  a:hover {
-    color: #ACACAC;
+    font-size: 0.9em;
   }
 
   #header {
-    margin-top: 15%;
-    transition: all ease 0.5s;
-  }
-
-  #header.active {
-    margin-top: 0;
-    opacity: 0;
+    margin-top: 50%;
   }
 
   /* Search Bar */
   #search-bar, #search {
-    margin: 5% auto 0 auto;
-    display: block;
+    margin: 20% auto 0 auto;
     height: 50px;
-    width: 500px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 10px #141414;
-    background-color: #1C1C1B;
-    transition: all ease 0.5s;
+    width: 300px;
   }
 
   #search {
-    text-align: center;
-    font-size: 1.5em;
-    background-color: #1C1C1B;
-    border: 1px solid #323230;
-  }
-
-  #search:focus {
-    outline: none;
+    font-size: 1em;
   }
 
   #search.active, #search.active {
-    margin: 0 auto;
-  }
-
-  /* Removes "x" button from search bar
-  Taken from Maxime Rouiller
-  blog post: Remove the X from Internet Explorer and Chrome input type search */
-  input[type=search]::-ms-clear {
-    display: none; width : 0; height: 0;
-  }
-
-  input[type=search]::-ms-reveal {
-    display: none; width : 0; height: 0;
-  }
-  
-  input[type="search"]::-webkit-search-decoration,
-  input[type="search"]::-webkit-search-cancel-button,
-  input[type="search"]::-webkit-search-results-button,
-  input[type="search"]::-webkit-search-results-decoration {
-    display: none;
-  }
-
-  input {
-    color: #EDF0F1;
+    margin-top: 50%;
   }
 
   /* Item-Area */
   #item-area {
-    display: none;
-    grid-template-columns: repeat(1);
-    transform: translateY(100px);
-    margin-top: -100px;
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .item-icon {
-    position: absolute;
-    width: 80px;
-    height: 87.2px;
-    border-radius: 10px 0px 0px 0px;
-    float: left;
-    box-shadow: 0px -7px 10px -10px #141414;
+    display: block;
+    width: 53.3px;
+    height: 58.13px;
+    margin: 0 auto;
   }
 
   .item-box {
-    width: 500px;
-    height: 87.2px;
-    background-color: #24252A;
-    border-radius: 10px 10px 0px 0px;
-    box-shadow: 0px -7px 10px -10px #141414;
+    width: 250px;
+    height: 58.13px;
   }
 
   .item {
-    opacity: 0;
-    margin: 0 auto;
     margin-top: 50px;
-    transition: all ease-in 0.3s;
-  }
-
-  .item.active {
-    opacity: 1;
   }
 
   .location-box {
-    margin-top: 5px;
-    width: 500px;
-    height: 50px;
-    background-color: #24252A;
-    border-radius: 0px 0px 10px 10px;
-    box-shadow: 0px 7px 10px -10px #1C1C1B;
-    outline: none;
+    width: 200px;
+    height: 0px;
+    transition: none;
   }
 
-  /* Footer */
-  #footer-content {
-    margin-top: 150px;
-    background-color: #1C1C1B;
-    font-size: 1em;
-    justify-content: center;
-    bottom: 0;
-    width: 100%;
+  .location-box.active {
+    transform: translateY(5%);
+    opacity: 1;
+    height: 250px;
   }
-
-  #footer-content > p {
-    opacity: 0.5;
-  }
-
-  /* Media query for mobile */
-  @media (max-width: 500px) {
-
-    /* Text styling */    
-    h1 {
-      line-height: 58.13px;
-      font-size: 1.2em;
-    }
-    
-    p {
-      line-height: 50px;
-      font-size: 0.9em;
-    }
-
-    #header {
-      margin-top: 50%;
-    }
-
-    /* Search Bar */
-    #search-bar, #search {
-      margin: 20% auto 0 auto;
-      height: 50px;
-      width: 300px;
-    }
-
-    #search {
-      font-size: 1em;
-    }
-
-    #search.active, #search.active {
-      margin-top: 50%;
-    }
-
-    /* Item-Area */
-    #item-area {
-      grid-template-columns: repeat(1, 1fr);
-    }
-
-    .item-icon {
-      width: 53.3px;
-      height: 58.13px;
-      border-radius: 10px 0px 0px 0px;
-      float: left;
-      box-shadow: 0px -7px 10px -10px #141414;
-    }
-
-    .item-box {
-      width: 350px;
-      height: 58.13px;
-    }
-
-    .item {
-      margin-top: 50px;
-    }
-
-    .location-box {
-      width: 350px;
-      height: 50px;
-    }
-  }
+}
