--- a/index.css
+++ b/index.css
@@ -150,7 +150,7 @@ input {
   opacity: 0;
   margin: 0 auto;
   margin-top: 50px;
-  transition: all ease-in 0.s;
+  transition: all ease-in 0.3s;
 }
 
 .item.active {
