--- a/styles/items.css
+++ b/styles/items.css
@@ -49,6 +49,7 @@ the item area on desktop, and above it on mobile */
     margin-top: 10em;
 }
 
+/* Base styles for filter container */
 #filter-container {
     display: flex;
     position: relative;
@@ -144,19 +145,24 @@ input[type="checkbox"].toggle:checked + label::before {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    overflow-x: auto;
+    overflow: auto;
+
+
     width: 50%;
+    height: fit-content;
 }
 
 /* Sets overflow to 5 items, changes background color, and changes positioning */
 .item {
     display: flex;
     justify-content: center;
-    flex-grow: 2;
+    flex: 1 0 10%;
     background-color: var(--white);
 
     padding: 1em;
     margin: 2em;
+    width: fit-content;
+    height: fit-content;
 
     border-radius: 1em;
     box-shadow:
