Added a search bar and item rarity images
-Added a search bar
-Added Item rarity images: Gold, Silver, and Copper (Bronze)
-Changed margin for filter-container
-Added header-container
-Changed --lightblue color opacity

Plan on every item having a rarity icon that the user can sort by. Kinda weird showing "hide gold items" if the user doesn't know which items are gold rarity.
Also plan on showing the item names in the boxes, but that may be difficult since some names are LONG.

--- a/styles/items.css
+++ b/styles/items.css
@@ -11,7 +11,7 @@
     --textwhite: rgba(222, 224, 225, 1);
     --textblack: rgba(35, 37, 38, 1);
     --blue: rgba(0, 150, 255, 0.8);
-    --lightblue: rgba(0, 150, 255, 0.1);
+    --lightblue: rgba(0, 150, 255, 0.05);
     --buttonwhite: rgba(211, 216, 219, 1);
     --buttonblue: rgba(0, 144, 246, 1);
   }
@@ -28,22 +28,72 @@ body {
     background-color: var(--darkwhite);
 }
 
-/* Keeps the footer at the bottom */
-main {
-    min-height: 100vh;
+
+
+/* HEADER AND SEARCH CONTAINER AREA BELOW */
+
+
+
+#header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: var(--lightblue); */
+
+    height: 10em;
+    margin-bottom: 2em;
+}
+
+/* Base styles for search bar */
+#search-bar-container {
+    display: flex;
+    justify-content: center;
+}
+
+#search {
+    height: 2em;
+    width: 20em;
+    background: transparent;
+    
+    text-align: center;
+    font-size: 1.5em;
+    font-family: 'Poppins', 'sans-serif';
+    
+    outline: none;
+    border-bottom: thin var(--black) solid;
   }
+
+/* Removes border and x button from search input */
+
+/* IE/Edge */
+input[type=search]::-ms-clear
+ { 
+    display: none;
+}
+
+/* Webkit browsers */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+    display: none;
+}
 
 
 
 /* ITEM FILTER AREA BELOW */
 
-
+/* Keeps footer at the bottom */
+main {
+    min-height: 100vh;
+}
 
 /* Container for item area and filter. Using it to put the filter next to 
 the item area on desktop, and above it on mobile */
 #filter-item-container {
     display: flex;
     flex-flow: row nowrap;
+    overflow: auto;
     justify-content: center;
 
     margin-top: 10em;
@@ -51,8 +101,8 @@ the item area on desktop, and above it on mobile */
 
 /* Base styles for filter container */
 #filter-container {
-    display: flex;
     position: relative;
+    display: flex;
     flex-direction: column;
     align-items: center;
     order: 2;
@@ -60,7 +110,7 @@ the item area on desktop, and above it on mobile */
     width: 15em;
     height: fit-content;
     padding: 1em 3em;
-    margin: 0 10em;
+    margin-left: 10em;
 
     border-radius: 1em;
     box-shadow:
@@ -156,11 +206,13 @@ input[type="checkbox"].toggle:checked + label::before {
 .item {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     flex: 1 0 10%;
     background-color: var(--white);
 
     padding: 1em;
-    margin: 2em;
+    margin: 1em;
     width: fit-content;
     height: fit-content;
 
@@ -178,7 +230,15 @@ input[type="checkbox"].toggle:checked + label::before {
     height: 90px;
 }
 
+.item > p {
+    text-align: center;
+}
 
+/* Base styles for item rarity icons (Gold, Silver, and Bronze (Copper) */
+.item-rarity-icon {
+    max-width: 32px;
+    max-width: 32px;
+}
 
 /* Footer STYLING BELOW */
 
