--- a/styles/index.css
+++ b/styles/index.css
@@ -205,11 +205,7 @@ a.darkMode:hover {
 Taken from Maxime Rouiller
 blog post: Remove the X from Internet Explorer and Chrome input type search */
 input[type=search]::-ms-clear {
-  display: none; width : 0; height: 0;
-}
-
-input[type=search]::-ms-reveal {
-  display: none; width : 0; height: 0;
+  display: none;
 }
 
 input[type="search"]::-webkit-search-decoration,
@@ -217,6 +213,7 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   display: none;
+  width : 0; height: 0;
 }
 
 input {
