--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,17 @@
+/* BASE WEBSITE FORMATTING AND VARIABLES (and some classes/ids) BELOW */
+
+
+
 /* Color variables */
 :root {
   --white: rgba(255, 255, 255, 1);
-  --offwhite: rgba(250, 252, 255, 1);
-  --black: rgba(rgba(18, 18, 18, 1));
-  --offblack: rgba(24, 24, 24, 1);
-  --textwhite: rgba(222, 224, 225, 1);
-  --textblack: rgba(35, 37, 38, 1);
-  --blue: rgba(0, 150, 255, 0.8);
+  --black: rgba(18, 18, 18, 1);
+  --opacBlack: rgba(18, 18, 18, 0.5); /* opac - opacity */
+  --lightBlack: rgba(24, 24, 24, 0.95);
+  --lightBlue: rgba(29, 156, 246, 1);
+  --blue: rgba(6, 130, 219, 1);
 }
+
 /* Clears the formatting for the website */
 * {
   margin: 0;
@@ -15,392 +19,234 @@
   border: 0;
 }
 
-/* Defaults for body and animation when the webpage loads */
-@keyframes pageLoad {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
+/* Changes body background color */
 body {
-  animation: pageLoad ease-in 0.5s;
-  background-color: var(--offwhite);
-  font-family: 'Poppins', 'sans-serif';
-}
-
-body.darkMode {
-  background-color: var(--offblack);
-}
-
-main {
-  min-height: 100vh;
-  margin-bottom: 100px;
-}
-
-/* Text styling */
-.text-el {
-  color: var(--textblack);
+  font-family: 'Inter', 'Sans-Serif';
   text-align: center;
-  float: center;
+  font-size: 16px; /* 1em = 16px */
+  color: var(--white);
 }
 
-.text-el.darkMode {
-  color: var(--textwhite);
+.large-text {
+  font-size: 3em;
+  font-weight: 200;
 }
 
-h1 {
-  line-height: 60px;
-  font-size: 1.5em;
+#fgo-icon {
+  width: 3em;
+  height: 3em;
 }
 
-h2 {
-  font-size: 2em;
+#fgo-icon-outline {
+  width: 1.5em;
+  height: 1.5em;
 }
 
-h3 {
-  font-size: 0.7em;
-  opacity: 0.5;
+.button {
+  all: unset;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-size: 1.125em;
+  font-weight: bold;
+
+  padding: 1em;
+  width: 7em;
+  
+  border-radius: 0.5em;
+
+  background-color: var(--lightBlue);
+  transition: background-color 0.2s ease;
 }
 
-p {
-  line-height: 65px;
-  font-size: 1.2em;
-  transition: 0.1s;
+.button:hover {
+  background-color: var(--blue);
 }
 
 a {
   text-decoration: none;
-  transition: all 0.2s;
-  pointer-events: auto;
+  color: inherit;
 }
 
-a:hover {
-  color: var(--offblack);
+
+
+/* MAIN AREA BELOW */
+
+
+
+/* Keeps footer at the bottom */
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: baseline;
+  
+  overflow-x: hidden;
+
+  height: 100vh;
+  max-width: 100%;
+
+  background: no-repeat url(../images/page-images/background.png);
+  background-size: cover;
 }
 
-a.darkMode:hover {
-  color: var(--offwhite);
-}
-
-#header {
-  margin-top: 15%;
-  transition: all ease 0.5s;
-}
-
-#header.active {
-  margin-top: 0;
-  opacity: 0;
-}
-
-/* Item Button */
-#item-button-container {
+#home-page-container {
   display: flex;
   justify-content: center;
-  opacity: 1;
+  align-items: center;
+
+  height: 100%;
+  width: 100%;
+  background-color: var(--opacBlack);
 }
 
-
-
-#item-button {
-  background-color: var(--white);
-  padding: 0.5em 2em;
-  margin: 5% 1em;
-  border: thin solid var(--offblack);
-  border-radius: 50px;
-  text-align: center; 
-  font-size: 1.5em;
-  color: var(--textblack);
-  transition: ease 0.2s;
-  user-select: none;
-}
-
-#item-button.darkMode {
-  color: var(--textwhite);
-  background-color: var(--black);
-  border-color: var(--offwhite);
-}
-
-#item-button:hover {
-  border-color: var(--blue);
-}
-
-#item-button:hover.darkMode {
-  border-color: var(--blue);
-}
-
-/* Dark mode Buttons */
-#dark-mode-button, #light-mode-button {
-  display: none;
-  position: fixed;
-  top: 4em;
-  right: 4em;
-  max-width: 1%;
-  padding: 1em;
-  border-radius: 100px;
-  pointer-events: auto;
-  transition: background-color ease 0.25s;
-}
-
-#dark-mode-button {
-  display: block;
-  background-color: #121212;
-}
-
-#dark-mode-button.active {
-  display: none;
-}
-
-#dark-mode-button:hover {
-  background-color: var(--offblack);
-}
-
-#light-mode-button {
-  background-color: #FFFFFF;
-}
-
-#light-mode-button.active {
-  display: block;
-}
-
-/* Search Bar */
-#search-bar-container, #search {
-  margin: 5% auto 2% auto;
-  display: none;
-  opacity: 0;
-  height: 50px;
-  width: 500px;
-  transition: all ease 0.5s;
-}
-
-#search {
-  text-align: center;
-  font-size: 1.5em;
-  font-family: 'Poppins', 'sans-serif';
-  border-radius: 50px;
-  box-shadow:
-  0px 0px 1px rgba(0, 0, 0, 0.1), 
-  0px 2px 2px rgba(0, 0, 0, 0.1),
-  0px 4px 4px rgba(0, 0, 0, 0.1),
-  0px 8px 8px rgba(0, 0, 0, 0.1);
-  background-color:var(--white);
-}
-
-#search-bar-container.darkMode {
-  color: #FFFFFF;
-}
-
-#search:focus {
-  outline: none;
+#text-area {
+  display: inherit;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 5em;
   
 }
 
-#search:active, #search:active {
-  margin: 0 auto;
-}
-
-/* Removes "x" button from search bar
-Taken from Maxime Rouiller
-blog post: Remove the X from Internet Explorer and Chrome input type search */
-input[type=search]::-ms-clear {
-  display: none;
-}
-
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-  display: none;
-  width : 0; height: 0;
-}
-
-input {
-  color: #181818;
-}
-
-input.darkMode {
-  color: #FFFFFF;
-}
-
-/* Item-Area */
-#item-area {
-  display: none;
-  flex-direction: column;
-  transform: translateY(100px);
-  margin-top: -100px;
-}
-
-.item-box {
-  display: flex;
+#image-area {
   position: relative;
-  width: 450px;
-  height: 75px;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 10px;
-  box-shadow:
-  0px 0px 1px rgba(0, 0, 0, 0.1), 
-  0px 2px 2px rgba(0, 0, 0, 0.1),
-  0px 3px 3px rgba(0, 0, 0, 0.1),
-  0px 4px 4px rgba(0, 0, 0, 0.1);
-  justify-content: center;
+}
+#text-area, #image-area{
+  flex: 0 0 50%;
+}
+
+#button-area {
+  display: inherit;
   align-items: center;
-  pointer-events: visible;
-  transition: background-color ease 0.2s;
+  gap: 2em;
 }
 
-.item-box.darkMode {
-  background-color: #24252A;
-}
-
-.item-box:hover {
-  background-color: rgba(240, 240, 240, 0.2);
-}
-
-.item-box > h1 {
-  flex: 1 0 0;
-}
-
-.item {
+#hero {
+  position: relative;
+  
   opacity: 0;
-  margin: 1em auto;
+
+  max-width: 80%;
+  max-height: 80%;
 }
 
-.item.active {
-opacity: 1;
+.fade-in {
+  animation: fadeIn ease 1.5s forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
-.location-box {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  width: 300px;
-  height: 0px;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 10px;
-  box-shadow: 
-  0px 0px 1px rgba(0, 0, 0, 0.1), 
-  0px 2px 2px rgba(0, 0, 0, 0.1),
-  0px 3px 3px rgba(0, 0, 0, 0.1),
-  0px 4px 4px rgba(0, 0, 0, 0.1);;
-  opacity: 0;
-  pointer-events: none;
-}
 
-.location-box > .item-icon {
-  margin-top: 25px;
-  width: 60px;
-  height: 65.4px;
-}
 
-.location-box > p.active {
-  pointer-events: auto;
-}
+/* Footer STYLING BELOW */
 
-.location-box.active {
-  transform: translateY(5%);
-  opacity: 1;
-  height: 300px;
-}
 
-.location-box.darkMode {
-  background-color: #24252A;
-}
 
-/* Footer */
 #footer-content {
-  margin-top: 150px;
-  background-color: rgba(237, 239, 242, 0.5);
-  font-size: 1em;
+  display: flex;
   justify-content: center;
-  bottom: 0;
   width: 100%;
-}
+  padding: 1em 0;
 
-#footer-content.darkMode {
-  background-color: #1C1C1B;
+  font-size: 1em;
+
+  background-color: var(--black);
 }
 
 #footer-content > p {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
-/* Media query for mobile */
-@media (max-width: 500px) {
+/* Media query for smaller screens */
+@media (max-width: 1000px) {
 
-  /* Text styling */    
-  h1 {
-    line-height: 58.13px;
-    font-size: 4vw;
+  #container {
+    background-image: url(../images/page-images/mobile-background.png);
   }
 
-  p {
-    line-height: 50px;
-    font-size: 0.9em;
+  #home-page-container {
+    flex-direction: column;
   }
 
-  #header {
-    margin-top: 50%;
+  #image-area {
+    order: 1;
   }
 
-  #header.darkMode {
-    color: #FFFFFF;
+  #text-area {
+    order: 2;
   }
-
-  /* Item Button */
-  #item-button {
-    font-size: 1.25em;
-    margin-top: 20%;
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(100px);
+    }
+    30% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
   }
+}
+/* Media query for phones */
+@media (max-width: 800px) {
 
-  /* Dark mode button */
-  #dark-mode-button-container {
-    display: none;
-  }
-
-  /* Search Bar */
-  #search-bar-container, #search {
-    margin: 20% auto 0 auto;
-    height: 50px;
-    width: 300px;
-  }
-
-  #search {
+  .button {
     font-size: 1em;
   }
 
-  #search:active {
-    margin-top: 50%;
-  }x
-
-  .item-icon {
-    display: block;
-    width: 53.3px;
-    height: 58.13px;
-    margin: 0 auto;
+  #container {
+    background-position: center right;
   }
 
-  .item-box {
-    width: 250px;
-    height: 58.13px;
+  #text-area {
+    max-height: 500px;
+  }
+  
+  #button-area {
+    gap: 1em;
   }
 
-  .item {
-    margin-top: 50px;
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    30% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+}
+
+@media (max-width: 300px) {
+  .large-text {
+    font-size: 1.5em;
   }
 
-  .location-box {
-    width: 200px;
-    height: 0px;
-    transition: none;
+  #home-text > h2 {
+    font-size: 0.75em;
   }
 
-  .location-box.active {
-    transform: translateY(5%);
-    opacity: 1;
-    height: 250px;
+  .button {
+    font-size: 0.75em;
   }
 }
